# moneyman

./: CLAUDE.md  CMakeLists.txt  README.md
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
docs/plans/: 2026-03-02-feature-roadmap-design.md  2026-03-05-visual-overhaul-design.md  2026-03-05-visual-overhaul-plan.md  2026-03-06-source-document-attachments-design.md
resources/: resources.qrc
resources/themes/: dark.qss  light.qss
src/: main.cpp
src/accounting/: account.cpp  account.h  journal_entry.cpp  journal_entry.h  tax_categories.cpp  tax_categories.h
src/app/: main_window.cpp  main_window.h
src/db/: database.cpp  database.h
src/models/: account_model.cpp  account_model.h  journal_line_model.cpp  journal_line_model.h
src/theme/: theme_manager.cpp  theme_manager.h
src/utils/: csv_export.cpp  csv_export.h  csv_import.cpp  csv_import.h  print_report.cpp  print_report.h
src/views/: account_combo_delegate.cpp  account_combo_delegate.h  accounts_widget.cpp  accounts_widget.h  add_account_dialog.cpp  add_account_dialog.h  attachments_dialog.cpp  attachments_dialog.h  audit_log_widget.cpp  audit_log_widget.h  balance_sheet_widget.cpp  balance_sheet_widget.h  close_period_dialog.cpp  close_period_dialog.h  dashboard_widget.cpp  dashboard_widget.h  general_ledger_widget.cpp  general_ledger_widget.h  help_browser_dialog.cpp  help_browser_dialog.h  import_csv_dialog.cpp  import_csv_dialog.h  income_statement_widget.cpp  income_statement_widget.h  journal_entry_dialog.cpp  journal_entry_dialog.h  journal_list_widget.cpp  journal_list_widget.h  password_dialog.cpp  password_dialog.h  sidebar_widget.cpp  sidebar_widget.h  tax_summary_widget.cpp  tax_summary_widget.h  trial_balance_widget.cpp  trial_balance_widget.h
tests/test_accounting/: test_account.cpp  test_journal_entry.cpp  test_tax_categories.cpp
tests/test_db/: test_database.cpp
